--- a/package.json
+++ b/package.json
@@ -1,18 +1,11 @@
 {
-  "source": "resources/src/beacon.js",
-  "main": "resources/dist/beacon.js",
-  "targets": {
-    "main": {
-      "includeNodeModules": true
-    }
-  },
   "scripts": {
-    "watch": "parcel watch",
-    "build": "parcel build"
+    "build": "vite build",
+    "watch": "vite build --watch"
   },
   "devDependencies": {
     "bowser": "^2.11.0",
-    "parcel": "^2.13.3",
+    "vite": "^6.1.1",
     "web-vitals": "^4.2.4"
   }
 }
