--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "type": "module",
   "scripts": {
     "build": "vite build",
-    "watch": "vite build --watch"
+    "watch": "vite build --watch",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "bowser": "^2.11.0",
+    "typescript": "^5.7.3",
     "vite": "^6.1.1",
     "web-vitals": "^4.2.4"
   }
