Don't use regex

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-    "watch": "vite build --watch",
+    "dev": "vite build --watch",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
